  should look like. It is heavily inspired by Google's own documentation
  theme, but doesn't copy it blindly.

  * Introduced Webpack for more sophisticated JavaScript bundling
  * Introduced ESLint and SassLint for code style checks
  * Introduced more accurate Material Design colors and shadows
  * Introduced modular scales for harmonic font sizing
  * Rewrite of CSS using the BEM methodology and SassDoc guidelines
  * Rewrite of JavaScript using ES6 and Babel as a transpiler
  * Rewrite of Admonition, Permalinks and Codehilite integration
  * Rewrite of the complete typographical system
  * Rewrite of Gulp asset pipeline in ES6 and separation of tasks
  * Removed Bower as a dependency in favor of npm
  * Removed custom icon build in favor of the Material Design iconset
  * Removed _blank targets on links due to vulnerability: http://bit.ly/1Mk2Rtw
  * Removed unversioned assets from build directory
  * Restructured templates into base templates and partials
  * Added build and watch scripts in package.json
  * Added support for Metadata and Footnotes Markdown extensions
  * Added support for pymdownx.* Markdown extensions
  * Added support for collapsible sections in navigation
  * Added support for separate table of contents
  * Added support for better accessibility through REM-based layout
  * Added icons for GitHub, GitLab and BitBucket integrations
  * Added more detailed documentation on specimen, extensions etc.
  * Added a 404.html error page for deployment on GitHub Pages
  * Fixed live reload chain in watch mode when saving a template

mkdocs-material-0.2.4 (2016-06-26)

  * Fixed improperly set default favicon
  * Fixed #33: Protocol relative URL for web fonts doesn't work with file://
  * Fixed #34: IE11 on Windows 7 doesn't honor max-width on main tag
  * Fixed #35: Add styling for blockquotes

mkdocs-material-0.2.3 (2016-05-16)

  * Fixed #25: Highlight inline fenced blocks
  * Fixed #26: Better highlighting for keystrokes